--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 /.idea/
 /chromedata/
 /Application/
-/Future Use/TelegramWhatsapp.py/
-/Future Use/IDs.py/
+/Future Use/TelegramWhatsapp.py
+/Future Use/IDs.py
+
